--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,2 +1,18 @@
 /* Import all base styles. */
 @import url('./all/all.css');
+
+html,
+body {
+  width: 100%;
+  height: 100%;
+  padding: 0;
+  margin: 0;
+  overflow: hidden;
+}
+
+canvas {
+  width: 100%;
+  height: 100%;
+  display: block;
+  font-size: 0;
+}
